# web-mantenimientovehicular

./: Procfile  main.py  package-lock.json  pnpm-lock.yaml  pyproject.toml  requirements.txt
apps/analisis/: apps.py  chatbot.py  models.py  urls.py  views.py
apps/bitacoras/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/bitacoras/migrations/: 0001_initial.py  0002_bitacora_delete_bitacoraviaje.py  0003_alter_bitacora_options_and_more.py  0004_alter_bitacora_foto_odometro_fin_and_more.py
apps/cardexs/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/cardexs/migrations/: 0001_initial.py
apps/consumos_combustible/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/consumos_combustible/migrations/: 0001_initial.py  (+1 more)
apps/dotaciones_combustible/: apps.py  models.py
apps/mantenimientos/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/movimientos/: forms.py  models.py  urls.py  views.py
apps/notificaciones/: admin.py  forms.py  models.py  urls.py  views.py
apps/reportes/: urls.py  views.py
apps/repuestos/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/usuarios/: admin.py  forms.py  models.py  urls.py  views.py
apps/vehiculos/: admin.py  forms.py  models.py  urls.py  views.py
apps/web/: urls.py  views.py
config/: settings.py  urls.py
static/src/: output.css
templates/: _base.html  login.html
templates/admin/: _base.html
templates/componentes/: banner.html  cardCasillero.html  cardSuscripcion.html  error.html  form_login.html  slider.html
(+134 files in other folders)
