[project]
name = "web-mantenimientovehicular"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.54",
    "django>=5.2.7",
    "django-compressor>=4.5.1",
    "django-storages>=1.14.6",
    "gunicorn>=23.0.0",
    "hypercorn>=0.17.3",
    "pillow>=12.0.0",
    "psycopg2-binary>=2.9.11",
    "uvicorn>=0.37.0",
    "whitenoise>=6.11.0",
]
